--- a/src/style.css
+++ b/src/style.css
@@ -66,8 +66,8 @@ nav a:hover {
     background-color: white;
     border: 5px solid;
     width: 60%;
-    padding-top:3%;
     margin-top:5%;
+    margin-bottom:5%;
   }
 
 img {
